Fix spacing

--- a/main.css
+++ b/main.css
@@ -818,12 +818,6 @@ li.bookmark {
   float: right;
 }
 
-/* ======================================
-
-    MediaQuery-Reporter Styles
-
-========================================= */
-
 .media-query-reporter-switch {
   font-weight: bold;
   position: fixed;
@@ -840,38 +834,38 @@ li.bookmark {
 }
 
 .media-query-reporter:after {
-    content: "less than 320px";
-    font-size: 300%;
-    font-weight: bold;
-    position: fixed;
-    bottom: 60px;
-    width: 100%;
-    text-align: center;
-    background-color: hsla(1,60%,40%,0.7);
-    color: #fff;
-    left: 0;
+  content: "less than 320px";
+  font-size: 300%;
+  font-weight: bold;
+  position: fixed;
+  bottom: 60px;
+  width: 100%;
+  text-align: center;
+  background-color: hsla(1,60%,40%,0.7);
+  color: #fff;
+  left: 0;
 }
 @media only screen and (min-width: 320px) {
-    .media-query-reporter:after {
-        content: "320 to 480px";
-        background-color: hsla(90,60%,40%,0.7);
-    }
+  .media-query-reporter:after {
+      content: "320 to 480px";
+      background-color: hsla(90,60%,40%,0.7);
+  }
 }
 @media only screen and (min-width: 480px) {
-    .media-query-reporter:after {
-        content: "480 to 768px";
-        background-color: hsla(180,60%,40%,0.7);
-    }
+  .media-query-reporter:after {
+      content: "480 to 768px";
+      background-color: hsla(180,60%,40%,0.7);
+  }
 }
 @media only screen and (min-width: 768px) {
-    .media-query-reporter:after {
-        content: "768 to 1024px";
-        background-color: hsla(270,60%,40%,0.7);
-    }
+  .media-query-reporter:after {
+      content: "768 to 1024px";
+      background-color: hsla(270,60%,40%,0.7);
+  }
 }
 @media only screen and (min-width: 1024px) {
-    .media-query-reporter:after {
-        content: "1024 and up";
-        background-color: hsla(360,60%,40%,0.7);
-    }
+  .media-query-reporter:after {
+      content: "1024 and up";
+      background-color: hsla(360,60%,40%,0.7);
+  }
 }
